Initial content update.

--- a/index.html
+++ b/index.html
@@ -3,154 +3,178 @@
         <link href="assets/stylesheets/index.bundle.min.css" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-        <meta name="description" content="关于奈特。">
-        <meta name="keywords" content="奈特">
-        <title>about magicnat</title>
+        <meta name="description" content="关于蓝瓜。">
+        <meta name="keywords" content="蓝瓜">
+        <title>About langua | 关于蓝瓜</title>
     </head>
     <body>
         <div class="main-container">
             <div class="section header grid-container">
                 <div class="picture-container grid-30">
-                    <img class="picture" src="assets/images/nato.png">
+                    <img class="picture" src="assets/images/langua.svg">
                 </div>
                 <div class="grid-70">
                     <h1 class="greeting en">
-                        Hey, it's <span class="no-wrap"><a class="chem-element" element="sodium" href="https://en.wikipedia.org/wiki/Sodium" target="_blank">Na</a>to Morichika</span>
+                        Nya, it's <span class="no-wrap"><a class="chem-element" element="lanthanum" href="https://en.wikipedia.org/wiki/Lanthanum" target="_blank">La</a>ngua</span>
                     </h1>
                     <h1 class="greeting cn">
-                        <small class="prefix">好耶，</small><span class="name no-wrap">是奈特 <span class="face">(&lt;ゝω·) ~☆</span></span>
+                        <small class="prefix">好耶，</small><span class="name no-wrap">是蓝瓜 <span class="face">(&lt;ゝω·) ~☆</span></span>
                     </h1>
                     <div class="labels">
-                        <a alt="home" class="label" href="//nat.moe" target="_blank">
+                        <a alt="blog" class="label" href="https://blog.langua.moe" target="_blank">
                             <i aria-hidden="true" class="fa fa-map-marker"></i>
-                            <span class="title">奈特实验室</span>
-                            <span class="link">//nat.moe</span>
+                            <span class="title">langua@home</span>
+                            <span class="link"> -> Constructing</span>
                         </a>
                         <div alt="languages" class="label">
                             <i aria-hidden="true" class="fa fa-language"></i>
                             <span class="title">LANG</span>
-                            <span class="content">汉语 / 漢語 / English</span>
+                            <span class="content">Chinese / English</span>
                         </div>
                         <div alt="education" class="label">
                             <i aria-hidden="true" class="fa fa-university"></i>
-                            <span class="title">current</span>
-                            <span class="content">Syracuse University</span>
+                            <span class="title">Current</span>
+                            <span class="content">High school senior</span>
                         </div>
+                        <a alt="personality" class="label" href="https://www.16personalities.com/profiles/a02a8dce23d16" target="_blank">
+                            <i aria-hidden="true" class="fa fa-circle-o"></i>
+                            <span class="title">INFP</span>
+                            <span class="content">turbulent mediator</span>
+                        </a>
                     </div>
                     <div class="labels">
                         <div alt="browser" class="label">
-                            <i aria-hidden="true" class="fa fa-safari"></i>
-                            <span class="content">11.0.3</span>
+                            <i aria-hidden="true" class="fa fa-chrome"></i>
+                            <span class="content">80</span>
                         </div>
                         <div alt="editor" class="label">
                             <i aria-hidden="true" class="fa fa-keyboard-o"></i>
-                            <span class="content">vim</span>
+                            <span class="content">vscode</span>
                         </div>
                         <div alt="spaces or tabs" class="label">
                             <i aria-hidden="true" class="fa fa-i-cursor"></i>
                             <span class="content">spaces</span>
                         </div>
                         <div alt="platforms" class="label">
-                            <i aria-hidden="true" class="fa fa-apple"></i>
-                            <span class="content">sierra</span>
-                            <i aria-hidden="true" class="fa fa-linux"></i>
-                            <span class="content">debian</span>
-                            <span class="content">arch</span>
                             <i aria-hidden="true" class="fa fa-windows"></i>
-                            <span class="content">10</span>
+                            <span class="content">10 18363.592</span>
+                            <i aria-hidden="true" class="fa fa-linux"></i>
+                            <span class="content">Ubuntu TLS 18.04</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="section identity-category grid-container">
                 <h2 class="title">
-                    <i aria-hidden="true" class="fa fa-chevron-right"></i> Nato Morichika
+                    <i aria-hidden="true" class="fa fa-chevron-right"></i> Lan Gua
                     <span class="no-wrap">
-                        <small class="tag"><i aria-hidden="true" class="fa fa-tag"></i>network-eng</small>
-                        <small class="tag"><i aria-hidden="true" class="fa fa-tag"></i>sysop</small>
+                        <small class="tag"><i aria-hidden="true" class="fa fa-tag"></i>Student</small>
+                        <small class="tag"><i aria-hidden="true" class="fa fa-tag"></i>MUG Player</small>
                     </span>
                 </h2>
                 <div class="identities grid-50">
                     <div class="self-desc">
                     <p>
-                        奈特是一名计算机科学的大学生，<br>
-                        不爱动，见光死，晒太阳仿佛是要命。<br>
-                        讨厌人多的地方，认为一个人待着最棒。<br>
-                        <br>
-                        试过前端，写过后端，<br>
-                        做过运维，玩过网络工程，<br>
-                        却样样都不精。<br>
-                        <br>
-                        不明白自己想要什么，不知道自己想做什么，<br>
-                        羡慕厉害的人，但依然没有学的动力。<br>
-                        说着自己不明白的话，<br>
-                        做着自己搞不懂的事。
+📚 学生<br>
+🎶 听音乐 曲风不定<br>
+🎮 MUG & FPS<br>
+⌨️ 会一些Java(入坑的契机是Minecraft)<br>
+<br>
+不太善于交际，<br>
+喜欢和朋友呆在一起。<br>
+在试着表达自己。<br>
+<br>
+数学苦手，<br>
+理科就是灾难。<br>
+但有条理的思考是难得的事。<br>
+一定不能丢掉。<br>
+<br>
+玩玩音乐游戏，就当听歌。<br>
+在玩的有Arcaea和maimai。<br>
+想尝试SDVX和Beat Sabar。<br>
+开过Minecraft服务器，玩过彩虹六号。<br>
+现在都没有继续了。<br>
+<br>
+重新入坑Minecraft。<br>
+兴趣使然的Programmer(名不副实)。<br>
+写过一个bot，<br>
+最高级的功能是可以和人一起脸滚键盘。<br>
+<br>
+🎵 ~ Believe the Rainbow ~ 🌟 <br>
+                        
                     </p>
                     </div>
                 </div>
                 <ul class="identities grid-50">
                     <li class="identity">
-                        <a href="https://github.com/magicnat" target="_blank">
+                        <a href="https://github.com/Lori3f6" target="_blank">
                             <i aria-hidden="true" class="fa fa-github"></i>
-                            <span class="where">github</span>
-                            <span class="link">@magicnat</span>
+                            <span class="where">GitHub</span>
+                            <span class="link">@lori3f6
+                            </span>
                         </a>
                     </li>
-                    <li class="identity">
-                        <a href="https://github.com/nat-lab" target="_blank">
-                            <i aria-hidden="true" class="fa fa-flask"></i>
-                            <span class="where">lab</span>
-                            <span class="link">@nat-lab</span>
-                        </a>
-                    </li>
-                    <li class="identity">
-                        <a href="https://keybase.io/magicnat" target="_blank">
+					<li class="identity">
+                        <a href="./key_gpg(LanGua).pub" target="_blank">
                             <i aria-hidden="true" class="fa fa-key"></i>
-                            <span class="where">keybase</span>
-                            <span class="link">@magicnat</span>
+                            <span class="where">GPG Key</span>
+                            <span class="link">27C9 5645 6951 C819</span>
                         </a>
                     </li>
                     <li class="identity">
-                        <a href="http://bgp.he.net/AS396303" target="_blank">
-                            <i aria-hidden="true" class="fa fa-globe"></i>
-                            <span class="where">aut-num</span>
-                            <span class="link">396303</span>
-                        </a>
-                    </li>
-                    <li class="identity">
-                        <a href="https://telegram.me/magicnat" target="_blank">
+                        <a href="https://t.me/langua1" target="_blank">
                             <i aria-hidden="true" class="fa fa-telegram"></i>
-                            <span class="where">telegram</span>
-                            <span class="link">@magicnat</span>
+                            <span class="where">Telegram</span>
+                            <span class="link">@langua1</span>
                         </a>
                     </li>
                     <li class="identity">
-                        <a href="https://twitter.com/magicn4t" target="_blank">
-                            <i aria-hidden="true" class="fa fa-twitter"></i>
-                            <span class="where">twitter</span>
-                            <span class="link">@magicn4t</span>
+                            <a href="https://t.me/s/trilatiro" target="_blank">
+                                <i aria-hidden="true" class="fa fa-circle-o"></i>
+                                <span class="where">Daily Channal</span>
+                                <span class="link">@trilatiro</span>
+                            </a>
+                    </li>
+                    <li class="identity">
+                        <a target="_blank">
+                            <i aria-hidden="true" class="fa fa-gamepad"></i>
+                            <span class="where">Arcaea</span>
+                            <span class="link">483081265</span>
                         </a>
                     </li>
                     <li class="identity">
-                        <a href="https://osu.ppy.sh/u/4429495" target="_blank">
-                            <i aria-hidden="true" class="fa fa-wheelchair-alt"></i>
-                            <span class="where">osu!</span>
-                            <span class="link">nato morichika</span>
-                        </a>
-                    </li>
-                    <li class="identity">
-                        <a href="http://steamcommunity.com/id/maho_morichika" target="_blank">
+                        <a href="https://steamcommunity.com/id/langua1/" target="_blank">
                             <i aria-hidden="true" class="fa fa-steam"></i>
-                            <span class="where">steam</span>
-                            <span class="link">nat</span>
+                            <span class="where">Steam</span>
+                            <span class="link">langua1</span>
                         </a>
                     </li>
                 </ul>
+                <ul class="identities grid-50">
+                    <div class="self-desc">
+                        <p>
+Song for you...<br>
+Hold my hand.<br>
+Stand by me...<br>
+Let's stare at each other.<br>
+So happy...<br>
+It's raining hearts;<br>
+I could leap towards the tip of the sky!<br>
+<br>
+Next to you, no matter where,<br>
+I fear nothing.<br>
+The fragrance of white flowers;<br>
+I wish to laugh with you here.<br>
+This kind of dream, I so desire.<br> 
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 「next to you」</p>
+                    </div>
+                </ul>
             </div>
             <div class="section">
-                <a class="acknowledgement" href="//github.com/amphineko/amphineko" target="_blank"><i aria-hidden="true" class="fa fa-code-fork"></i> This is a fork of <span class="link">//futa.moe/amphineko</span>, a biopage by Naoki Rinmous.</a>
+                <a class="acknowledgement" href="https://github.com/Lori3f6/me.melon.blue" target="_blank"><i aria-hidden="true" class="fa fa-code-fork"></i> This is a fork of <span class="link">//futa.moe/amphineko</span>, a biopage by Naoki Rinmous.</a>
                 <div class="copyright">
-                    Copyright &copy; 2012-2018 Nato Morichika. Illustrations have their own licenses.
+                    Copyright &copy; 2020 Lori3f6. 
                 </div>
             </div>
         </div>
