--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link href="assets/stylesheets/index.bundle.min.css" rel="stylesheet">
+        <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
         <meta name="description" content="关于蓝瓜。">
@@ -115,7 +116,7 @@
                         </a>
                     </li>
 					<li class="identity">
-                        <a href="./key_gpg(LanGua).pub" target="_blank">
+                        <a href="./keys/key_gpg(Lori Qi).pub" target="_blank">
                             <i aria-hidden="true" class="fa fa-key"></i>
                             <span class="where">GPG Key</span>
                             <span class="link">27C9 5645 6951 C819</span>
