--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div alt="platforms" class="label">
                             <i aria-hidden="true" class="fa fa-windows"></i>
-                            <span class="content">10 18363.592</span>
+                            <span class="content">10 19041.84</span>
                             <i aria-hidden="true" class="fa fa-linux"></i>
                             <span class="content">Ubuntu TLS 18.04</span>
                         </div>
@@ -76,30 +76,28 @@
                 <div class="identities grid-50">
                     <div class="self-desc">
                     <p>
-📚 学生<br>
-🎶 听音乐 曲风不定<br>
+📚 学生。<br>
+🎶 音乐必不可少。<br>
 🎮 MUG & FPS<br>
-⌨️ 会一些Java(入坑的契机是Minecraft)<br>
+⌨️ Minecraft 回坑中。<br>
 <br>
+重建中，<br>
+不稳定。<br>
 不太善于交际，<br>
 喜欢和朋友呆在一起。<br>
-在试着表达自己。<br>
 <br>
 数学苦手，<br>
 理科就是灾难。<br>
 但有条理的思考是难得的事。<br>
 一定不能丢掉。<br>
 <br>
-玩玩音乐游戏，就当听歌。<br>
-在玩的有Arcaea和maimai。<br>
-想尝试SDVX和Beat Sabar。<br>
-开过Minecraft服务器，玩过彩虹六号。<br>
-现在都没有继续了。<br>
+偶尔玩玩音乐游戏，<br>
+有时会写写Java。<br>
 <br>
-重新入坑Minecraft。<br>
-兴趣使然的Programmer(名不副实)。<br>
-写过一个bot，<br>
-最高级的功能是可以和人一起脸滚键盘。<br>
+想说很多话，<br>
+想做很多事。<br>
+想学更多的东西，<br>
+了解这个世界。<br>
 <br>
 🎵 ~ Believe the Rainbow ~ 🌟 <br>
                         
@@ -154,21 +152,19 @@
                 <ul class="identities grid-50">
                     <div class="self-desc">
                         <p>
-Song for you...<br>
-Hold my hand.<br>
-Stand by me...<br>
-Let's stare at each other.<br>
-So happy...<br>
-It's raining hearts;<br>
-I could leap towards the tip of the sky!<br>
+                            Arguments that never clear.<br>
+                            Hate that doesn't disappear.<br>
+                            I hear the voices that forgive.<br>
+                            I see them standing hand in hand.<br>
+                            But with its arm open wide.<br>
+                            The earth embraces all again.<br>
+                            <br>
+                            I need to know,<br>
+                            If there's still anything that love can do?<br>
+                            I need to know,<br>
+                            If there's still anything that I can do?<br>
 <br>
-Next to you, no matter where,<br>
-I fear nothing.<br>
-The fragrance of white flowers;<br>
-I wish to laugh with you here.<br>
-This kind of dream, I so desire.<br> 
-<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 「next to you」</p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 「Is There Still Anything That Love Can Do」</p>
                     </div>
                 </ul>
             </div>
