--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
         <meta name="description" content="关于蓝瓜。">
-        <meta name="keywords" content="蓝瓜">
+        <meta name="keywords" content="蓝瓜, langua, CushawBluemelon, Cushaw_BlueMelon, bluemelon">
         <title>About langua | 关于蓝瓜</title>
     </head>
     <body>
@@ -86,18 +86,19 @@
 不太善于交际，<br>
 喜欢和朋友呆在一起。<br>
 <br>
-数学苦手，<br>
-理科就是灾难。<br>
-但有条理的思考是难得的事。<br>
-一定不能丢掉。<br>
-<br>
 偶尔玩玩音乐游戏，<br>
 有时会写写Java。<br>
+近期更多在忙学业的事。<br>
+<br>
+数学苦手，<br>
+理科就是灾难。<br>
+但思考是难得的事。<br>
+一定不能丢掉。<br>
 <br>
 想说很多话，<br>
 想做很多事。<br>
-想学更多的东西，<br>
-了解这个世界。<br>
+想学更多东西，<br>
+想了解这个世界。<br>
 <br>
 🎵 ~ Believe the Rainbow ~ 🌟 <br>
                         
@@ -142,7 +143,7 @@
                         </a>
                     </li>
                     <li class="identity">
-                        <a href="https://steamcommunity.com/id/langua1/" target="_blank">
+                        <a href="https://steamcommunity.com/id/langua1" target="_blank">
                             <i aria-hidden="true" class="fa fa-steam"></i>
                             <span class="where">Steam</span>
                             <span class="link">langua1</span>
