--- a/index.html
+++ b/index.html
@@ -1,180 +1,206 @@
 <html>
-    <head>
-        <link href="assets/stylesheets/index.bundle.min.css" rel="stylesheet">
-        <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-        <meta name="description" content="关于蓝瓜。">
-        <meta name="keywords" content="蓝瓜, langua, CushawBluemelon, Cushaw_BlueMelon, bluemelon">
-        <title>About langua | 关于蓝瓜</title>
-    </head>
-    <body>
-        <div class="main-container">
-            <div class="section header grid-container">
-                <div class="picture-container grid-30">
-                    <img class="picture" src="assets/images/langua.svg">
-                </div>
-                <div class="grid-70">
-                    <h1 class="greeting en">
-                        Nya, it's <span class="no-wrap"><a class="chem-element" element="lanthanum" href="https://en.wikipedia.org/wiki/Lanthanum" target="_blank">La</a>ngua</span>
-                    </h1>
-                    <h1 class="greeting cn">
-                        <small class="prefix">好耶，</small><span class="name no-wrap">是蓝瓜 <span class="face">(&lt;ゝω·) ~☆</span></span>
-                    </h1>
-                    <div class="labels">
-                        <a alt="blog" class="label" href="https://blog.langua.moe" target="_blank">
-                            <i aria-hidden="true" class="fa fa-map-marker"></i>
-                            <span class="title">langua@home</span>
-                            <span class="link"> -> Constructing</span>
-                        </a>
-                        <div alt="languages" class="label">
-                            <i aria-hidden="true" class="fa fa-language"></i>
-                            <span class="title">LANG</span>
-                            <span class="content">Chinese / English</span>
-                        </div>
-                        <div alt="education" class="label">
-                            <i aria-hidden="true" class="fa fa-university"></i>
-                            <span class="title">Current</span>
-                            <span class="content">High school senior</span>
-                        </div>
-                        <a alt="personality" class="label" href="https://www.16personalities.com/profiles/a02a8dce23d16" target="_blank">
-                            <i aria-hidden="true" class="fa fa-circle-o"></i>
-                            <span class="title">INFP</span>
-                            <span class="content">turbulent mediator</span>
-                        </a>
-                    </div>
-                    <div class="labels">
-                        <div alt="browser" class="label">
-                            <i aria-hidden="true" class="fa fa-chrome"></i>
-                            <span class="content">80</span>
-                        </div>
-                        <div alt="editor" class="label">
-                            <i aria-hidden="true" class="fa fa-keyboard-o"></i>
-                            <span class="content">vscode</span>
-                        </div>
-                        <div alt="spaces or tabs" class="label">
-                            <i aria-hidden="true" class="fa fa-i-cursor"></i>
-                            <span class="content">spaces</span>
-                        </div>
-                        <div alt="platforms" class="label">
-                            <i aria-hidden="true" class="fa fa-windows"></i>
-                            <span class="content">10 19041.84</span>
-                            <i aria-hidden="true" class="fa fa-linux"></i>
-                            <span class="content">Ubuntu TLS 18.04</span>
-                        </div>
-                    </div>
-                </div>
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148021123-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-148021123-2');
+    </script>
+    <link href="assets/stylesheets/index.bundle.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1,
+            minimum-scale=1, maximum-scale=1" />
+    <meta name="description" content="关于蓝瓜。蓝瓜的个人页面。一个传送门。About langua, a
+            protal." />
+    <meta name="author" content="langua" />
+    <meta name="keywords" content="蓝瓜, langua, CushawBluemelon,
+            Cushaw_BlueMelon, bluemelon" />
+    <meta name="robots" content="nofollow" />
+    <meta name="google" content="notranslate" />
+    <title>About langua | 关于蓝瓜</title>
+</head>
+
+<body>
+    <div class="main-container">
+        <div class="section header grid-container">
+            <div class="picture-container grid-30">
+                <img class="picture" src="assets/images/langua.svg">
             </div>
-            <div class="section identity-category grid-container">
-                <h2 class="title">
-                    <i aria-hidden="true" class="fa fa-chevron-right"></i> Lan Gua
-                    <span class="no-wrap">
-                        <small class="tag"><i aria-hidden="true" class="fa fa-tag"></i>Student</small>
-                        <small class="tag"><i aria-hidden="true" class="fa fa-tag"></i>MUG Player</small>
-                    </span>
-                </h2>
-                <div class="identities grid-50">
-                    <div class="self-desc">
-                    <p>
-📚 学生。<br>
-🎶 音乐必不可少。<br>
-🎮 MUG & FPS<br>
-⌨️ Minecraft 回坑中。<br>
-<br>
-重建中，<br>
-不稳定。<br>
-不太善于交际，<br>
-喜欢和朋友呆在一起。<br>
-<br>
-偶尔玩玩音乐游戏，<br>
-有时会写写Java。<br>
-近期更多在忙学业的事。<br>
-<br>
-数学苦手，<br>
-理科就是灾难。<br>
-但思考是难得的事。<br>
-一定不能丢掉。<br>
-<br>
-想说很多话，<br>
-想做很多事。<br>
-想学更多东西，<br>
-想了解这个世界。<br>
-<br>
-🎵 ~ Believe the Rainbow ~ 🌟 <br>
-                        
-                    </p>
+            <div class="grid-70">
+                <h1 class="greeting en">
+                    Nya, it's <span class="no-wrap"><a class="chem-element" element="lanthanum"
+                            href="https://en.wikipedia.org/wiki/Lanthanum" target="_blank">La</a>ngua</span>
+                </h1>
+                <h1 class="greeting cn">
+                    <small class="prefix">好耶，</small><span class="name
+                            no-wrap">是蓝瓜 <span class="face">(&lt;ゝω·) ~☆</span></span>
+                </h1>
+                <div class="labels">
+                    <a alt="blog" class="label" href="https://blog.langua.moe" target="_blank">
+                        <i aria-hidden="true" class="fa fa-map-marker"></i>
+                        <span class="title">langua@home</span>
+                        <span class="link"> -> Constructing</span>
+                    </a>
+                    <div alt="languages" class="label">
+                        <i aria-hidden="true" class="fa fa-language"></i>
+                        <span class="title">LANG</span>
+                        <span class="content">Chinese / English</span>
                     </div>
+                    <div alt="education" class="label">
+                        <i aria-hidden="true" class="fa fa-university"></i>
+                        <span class="title">Current</span>
+                        <span class="content">High school senior</span>
+                    </div>
+                    <a alt="personality" class="label" href="https://www.16personalities.com/profiles/a02a8dce23d16"
+                        target="_blank">
+                        <i aria-hidden="true" class="fa fa-circle-o"></i>
+                        <span class="title">INFP</span>
+                        <span class="content">turbulent mediator</span>
+                    </a>
                 </div>
-                <ul class="identities grid-50">
-                    <li class="identity">
-                        <a href="https://github.com/Lori3f6" target="_blank">
-                            <i aria-hidden="true" class="fa fa-github"></i>
-                            <span class="where">GitHub</span>
-                            <span class="link">@lori3f6
-                            </span>
-                        </a>
-                    </li>
-					<li class="identity">
-                        <a href="./keys/key_gpg(Lori Qi).pub" target="_blank">
-                            <i aria-hidden="true" class="fa fa-key"></i>
-                            <span class="where">GPG Key</span>
-                            <span class="link">27C9 5645 6951 C819</span>
-                        </a>
-                    </li>
-                    <li class="identity">
-                        <a href="https://t.me/langua1" target="_blank">
-                            <i aria-hidden="true" class="fa fa-telegram"></i>
-                            <span class="where">Telegram</span>
-                            <span class="link">@langua1</span>
-                        </a>
-                    </li>
-                    <li class="identity">
-                            <a href="https://t.me/s/trilatiro" target="_blank">
-                                <i aria-hidden="true" class="fa fa-circle-o"></i>
-                                <span class="where">Daily Channal</span>
-                                <span class="link">@trilatiro</span>
-                            </a>
-                    </li>
-                    <li class="identity">
-                        <a target="_blank">
-                            <i aria-hidden="true" class="fa fa-gamepad"></i>
-                            <span class="where">Arcaea</span>
-                            <span class="link">483081265</span>
-                        </a>
-                    </li>
-                    <li class="identity">
-                        <a href="https://steamcommunity.com/id/langua1" target="_blank">
-                            <i aria-hidden="true" class="fa fa-steam"></i>
-                            <span class="where">Steam</span>
-                            <span class="link">langua1</span>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="identities grid-50">
-                    <div class="self-desc">
-                        <p>
-                            Arguments that never clear.<br>
-                            Hate that doesn't disappear.<br>
-                            I hear the voices that forgive.<br>
-                            I see them standing hand in hand.<br>
-                            But with its arm open wide.<br>
-                            The earth embraces all again.<br>
-                            <br>
-                            I need to know,<br>
-                            If there's still anything that love can do?<br>
-                            I need to know,<br>
-                            If there's still anything that I can do?<br>
-<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 「Is There Still Anything That Love Can Do」</p>
+                <div class="labels">
+                    <div alt="browser" class="label">
+                        <i aria-hidden="true" class="fa fa-chrome"></i>
+                        <span class="content">80</span>
                     </div>
-                </ul>
-            </div>
-            <div class="section">
-                <a class="acknowledgement" href="https://github.com/Lori3f6/me.melon.blue" target="_blank"><i aria-hidden="true" class="fa fa-code-fork"></i> This is a fork of <span class="link">//futa.moe/amphineko</span>, a biopage by Naoki Rinmous.</a>
-                <div class="copyright">
-                    Copyright &copy; 2020 Lori3f6. 
+                    <div alt="editor" class="label">
+                        <i aria-hidden="true" class="fa fa-keyboard-o"></i>
+                        <span class="content">vscode</span>
+                    </div>
+                    <div alt="spaces or tabs" class="label">
+                        <i aria-hidden="true" class="fa fa-i-cursor"></i>
+                        <span class="content">spaces</span>
+                    </div>
+                    <div alt="platforms" class="label">
+                        <i aria-hidden="true" class="fa fa-windows"></i>
+                        <span class="content">10 19041.84</span>
+                        <i aria-hidden="true" class="fa fa-linux"></i>
+                        <span class="content">Ubuntu TLS 18.04</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </body>
+        <div class="section identity-category grid-container">
+            <h2 class="title">
+                <i aria-hidden="true" class="fa fa-chevron-right"></i> Lan
+                Gua
+                <span class="no-wrap">
+                    <small class="tag"><i aria-hidden="true" class="fa
+                                fa-tag"></i>Student</small>
+                    <small class="tag"><i aria-hidden="true" class="fa
+                                fa-tag"></i>MUG Player</small>
+                </span>
+            </h2>
+            <div class="identities grid-50">
+                <div class="self-desc">
+                    <p>
+                        📚 学生。<br>
+                        🎶 音乐必不可少。<br>
+                        🎮 MUG & FPS<br>
+                        ⌨️ Minecraft 回坑中。<br>
+                        <br>
+                        重建中，<br>
+                        不稳定。<br>
+                        不太善于交际，<br>
+                        喜欢和朋友呆在一起。<br>
+                        <br>
+                        偶尔玩玩音乐游戏，<br>
+                        有时会写写Java。<br>
+                        近期在忙学业的事。<br>
+                        <br>
+                        数学苦手，<br>
+                        理科就是灾难。<br>
+                        但思考是难得的事。<br>
+                        一定不能丢掉。<br>
+                        <br>
+                        想说很多话，<br>
+                        想做很多事。<br>
+                        想学更多东西，<br>
+                        想了解这个世界。<br>
+                        <br>
+                        🎵 ~ Believe the Rainbow ~ 🌟 <br>
+
+                    </p>
+                </div>
+            </div>
+            <ul class="identities grid-50">
+                <li class="identity">
+                    <a href="https://github.com/Lori3f6" target="_blank">
+                        <i aria-hidden="true" class="fa fa-github"></i>
+                        <span class="where">GitHub</span>
+                        <span class="link">@lori3f6
+                        </span>
+                    </a>
+                </li>
+                <li class="identity">
+                    <a href="./keys/key_gpg(Lori Qi).pub" target="_blank">
+                        <i aria-hidden="true" class="fa fa-key"></i>
+                        <span class="where">GPG Key</span>
+                        <span class="link">27C9 5645 6951 C819</span>
+                    </a>
+                </li>
+                <li class="identity">
+                    <a href="https://t.me/langua1" target="_blank">
+                        <i aria-hidden="true" class="fa fa-telegram"></i>
+                        <span class="where">Telegram</span>
+                        <span class="link">@langua1</span>
+                    </a>
+                </li>
+                <li class="identity">
+                    <a href="https://t.me/s/trilatiro" target="_blank">
+                        <i aria-hidden="true" class="fa fa-circle-o"></i>
+                        <span class="where">Daily Channal</span>
+                        <span class="link">@trilatiro</span>
+                    </a>
+                </li>
+                <li class="identity">
+                    <a target="_blank">
+                        <i aria-hidden="true" class="fa fa-gamepad"></i>
+                        <span class="where">Arcaea</span>
+                        <span class="link">483081265</span>
+                    </a>
+                </li>
+                <li class="identity">
+                    <a href="https://steamcommunity.com/id/langua1" target="_blank">
+                        <i aria-hidden="true" class="fa fa-steam"></i>
+                        <span class="where">Steam</span>
+                        <span class="link">langua1</span>
+                    </a>
+                </li>
+            </ul>
+            <ul class="identities grid-50">
+                <div class="self-desc">
+                    <p>
+                        Arguments that never clear.<br>
+                        Hate that doesn't disappear.<br>
+                        I hear the voices that forgive.<br>
+                        I see them standing hand in hand.<br>
+                        But with its arm open wide.<br>
+                        The earth embraces all again.<br>
+                        <br>
+                        I need to know,<br>
+                        If there's still anything that love can do?<br>
+                        I need to know,<br>
+                        If there's still anything that I can do?<br>
+                        <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        「Is There Still Anything That Love Can Do」</p>
+                </div>
+            </ul>
+        </div>
+        <div class="section">
+            <a class="acknowledgement" href="https://github.com/Lori3f6/me.melon.blue" target="_blank"><i
+                    aria-hidden="true" class="fa
+                        fa-code-fork"></i> This is a fork of <span class="link">//futa.moe/amphineko</span>,
+                a biopage by Naoki Rinmous.</a>
+            <div class="copyright">
+                Copyright &copy; 2020 Lori3f6.
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
