--- a/index.html
+++ b/index.html
@@ -98,23 +98,25 @@
                 <div class="self-desc">
                     <p>
                         📚 学生。<br>
-                        🎶 音乐必不可少。<br>
+                        🎶 音乐不可缺少。<br>
                         🎮 MUG & FPS<br>
                         ⌨️ Minecraft 回坑中。<br>
                         <br>
                         重建中，<br>
-                        不稳定。<br>
-                        不太善于交际，<br>
+                        不太稳定。<br>
+                        不善于交际，<br>
                         喜欢和朋友呆在一起。<br>
                         <br>
-                        偶尔玩玩音乐游戏，<br>
-                        有时会写写Java。<br>
-                        近期在忙学业的事。<br>
+                        最近在忙学业的事。<br>
+                        有时写写代码，<br>
+                        偶尔玩玩音乐游戏。<br>
                         <br>
-                        数学苦手，<br>
-                        理科就是灾难。<br>
-                        但思考是难得的事。<br>
-                        一定不能丢掉。<br>
+                        有些拖延症。<br>
+                        总把事情拖到最后。<br>
+                        在试着变得可靠一点。<br>
+                        <br>
+                        有时会带来麻烦，<br>
+                        谢谢对我友善的人。<br>
                         <br>
                         想说很多话，<br>
                         想做很多事。<br>
@@ -174,6 +176,8 @@
             <ul class="identities grid-50">
                 <div class="self-desc">
                     <p>
+                        Prayers that are never heard.<br>
+                        Reunions that never occur.<br>
                         Arguments that never clear.<br>
                         Hate that doesn't disappear.<br>
                         I hear the voices that forgive.<br>
