--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <html>
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148021123-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-148021123-2');
-    </script>
+    <meta http-equiv="cache-control" content="Private" />
+	<meta http-equiv="Cache-Control" content="max-age=7200" />
     <link href="assets/stylesheets/index.bundle.min.css" rel="stylesheet" />
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png" />
     <meta charset="utf-8">
