--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <a href="./keys/key_gpg(Lori Qi).pub" target="_blank">
                         <i aria-hidden="true" class="fa fa-key"></i>
                         <span class="where">GPG Key</span>
-                        <span class="link">27C9 5645 6951 C819</span>
+                        <span class="link">588C 9872 87A3 D939</span>
                     </a>
                 </li>
                 <li class="identity">
