--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="grid-70">
                 <h1 class="greeting en">
-                    Nya, it's <span class="no-wrap"><a class="chem-element" element="lanthanum"
+                    Nice to see you, it's <span class="no-wrap"><a class="chem-element" element="lanthanum"
                             href="https://en.wikipedia.org/wiki/Lanthanum" target="_blank">La</a>ngua</span>
                 </h1>
                 <h1 class="greeting cn">
@@ -36,7 +36,7 @@
                     <a alt="blog" class="label" href="https://blog.langua.moe" target="_blank">
                         <i aria-hidden="true" class="fa fa-map-marker"></i>
                         <span class="title">langua@home</span>
-                        <span class="link"> -> Constructing</span>
+                        <span class="link"> -> Too long to respond</span>
                     </a>
                     <div alt="languages" class="label">
                         <i aria-hidden="true" class="fa fa-language"></i>
@@ -58,7 +58,7 @@
                 <div class="labels">
                     <div alt="browser" class="label">
                         <i aria-hidden="true" class="fa fa-chrome"></i>
-                        <span class="content">80</span>
+                        <span class="content">83</span>
                     </div>
                     <div alt="editor" class="label">
                         <i aria-hidden="true" class="fa fa-keyboard-o"></i>
@@ -68,11 +68,9 @@
                         <i aria-hidden="true" class="fa fa-i-cursor"></i>
                         <span class="content">spaces</span>
                     </div>
-                    <div alt="platforms" class="label">
+                    <div alt="platform" class="label">
                         <i aria-hidden="true" class="fa fa-windows"></i>
-                        <span class="content">10 19041.84</span>
-                        <i aria-hidden="true" class="fa fa-linux"></i>
-                        <span class="content">Ubuntu TLS 18.04</span>
+                        <span class="content">10 19041</span>
                     </div>
                 </div>
             </div>
@@ -92,18 +90,18 @@
                 <div class="self-desc">
                     <p>
                         📚 学生。<br>
-                        🎶 音乐不可缺少。<br>
+                        🎶 听听歌<br>
                         🎮 MUG & FPS<br>
                         ⌨️ Minecraft 回坑中。<br>
-                        <br>
+						<br>
+                        最近在忙学业的事。<br>
+                        有时写写代码，<br>
+                        玩玩音乐游戏。<br>
+						<br>
                         重建中，<br>
                         不太稳定。<br>
                         不善于交际，<br>
-                        喜欢和朋友呆在一起。<br>
-                        <br>
-                        最近在忙学业的事。<br>
-                        有时写写代码，<br>
-                        偶尔玩玩音乐游戏。<br>
+                        但是喜欢和大家呆在一起。<br>
                         <br>
                         有些拖延症。<br>
                         总把事情拖到最后。<br>
@@ -139,53 +137,52 @@
                     </a>
                 </li>
                 <li class="identity">
-                    <a href="https://t.me/langua1" target="_blank">
+                    <a href="https://t.me/languaa" target="_blank">
                         <i aria-hidden="true" class="fa fa-telegram"></i>
                         <span class="where">Telegram</span>
-                        <span class="link">@langua1</span>
+                        <span class="link">@languaa</span>
                     </a>
                 </li>
                 <li class="identity">
                     <a href="https://t.me/s/trilatiro" target="_blank">
                         <i aria-hidden="true" class="fa fa-circle-o"></i>
-                        <span class="where">Daily Channal</span>
+                        <span class="where">Langua Daily</span>
                         <span class="link">@trilatiro</span>
                     </a>
                 </li>
                 <li class="identity">
-                    <a target="_blank">
-                        <i aria-hidden="true" class="fa fa-gamepad"></i>
-                        <span class="where">Arcaea</span>
-                        <span class="link">483081265</span>
+                    <a herf="https://twitter.com/langua___" target="_blank">
+                        <i aria-hidden="true" class="fa fa-twitter"></i>
+                        <span class="where">Twitter</span>
+                        <span class="link">@langua___</span>
                     </a>
                 </li>
                 <li class="identity">
-                    <a href="https://steamcommunity.com/id/langua1" target="_blank">
+                    <a href="https://steamcommunity.com/id/languawa" target="_blank">
                         <i aria-hidden="true" class="fa fa-steam"></i>
                         <span class="where">Steam</span>
-                        <span class="link">langua1</span>
+                        <span class="link">languawa</span>
                     </a>
                 </li>
             </ul>
             <ul class="identities grid-50">
                 <div class="self-desc">
                     <p>
-                        Prayers that are never heard.<br>
-                        Reunions that never occur.<br>
-                        Arguments that never clear.<br>
-                        Hate that doesn't disappear.<br>
-                        I hear the voices that forgive.<br>
-                        I see them standing hand in hand.<br>
-                        But with its arm open wide.<br>
-                        The earth embraces all again.<br>
-                        <br>
-                        I need to know,<br>
-                        If there's still anything that love can do?<br>
-                        I need to know,<br>
-                        If there's still anything that I can do?<br>
-                        <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        「Is There Still Anything That Love Can Do」</p>
+                    Everybody has their own version of what is just.<br>
+                    Maybe war is something that is natural for us.<br>
+                    But even the people that fill me with hate,<br>
+                    have their reasons to live their life that way.<br>
+                    <br>
+                    Everybody has their own version of what is just.<br>
+                    Maybe war is something that is natural for us.<br>
+                    But the justice that I have come to belive in,<br>
+                    must be hurting others more than I can comprehend.<br>
+                    <br>
+                    Dragon night, dragon night, dragon night, tonight.<br>
+                    All of us will sing together like we are best of friends.<br>
+                    Moon right, starry sky, fire birds, tonight.<br>
+                    Tonight our war will end even if it's just for one night.<br>
+                    <br> - SEKAI NO OWARI - 「Dragon Night」</p>
                 </div>
             </ul>
         </div>
@@ -200,5 +197,4 @@
         </div>
     </div>
 </body>
-
 </html>
